2005-09-29  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map_style.c: Removed "constants"-- found out that XML already has this feature!
	* src/glyph.c: Don't load the same image twice.  Allow loading at image's native resolution.
	* src/map_draw_gdk.c: Can now fill polygons with a tiled image.  Beginning support for moving POI to the layers.XML file.
	* src/util.c: Add code for GtkEntry "hints".  These are messages shown when there is nothing in the entry.  May be used for search box.

2005-09-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/help/roadster-help.xml:
	* data/help/legal.xml:
	* data/help/figures/window_layout.png: Added the basics of a help system.

	* src/db.c: Removed debug stuff.
	* src/glyph.c: Added glyph drawing (via gdk/pixbufs).
	* src/location.c: Added location attribute name inserting / retrieving.
	* src/locationset.c: Added 'icon' field.
	* src/main.c: Add some debug code to insert test POI data.
	* src/search.c: Removed knowledge of search result type icons.  Now each type can provide its own.
	* src/search_*.c: Provide an icon suggestion along with results.
	* src/map.c:
	* src/map_draw_gdk.c: Re-enable / fix POI drawing.
	* src/point.c:
	* src/pointstring.c:
	* src/locationset.c: Fixed area_size of chunk allocators.	

2005-09-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/roadster-icon.png:
	* data/roadster-logo.png: Added.  Not necessarily the final ones, just what I'm using now.

2005-09-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/*: Removed "m_" prefix from all struct variables!  (It makes much more sense in C++ where you can access this-> without writing it.)
	* src/searchwindow.c: Refactoring and changes to what/when messages get shown to users.

2005-09-24  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* data/roadster.glade: New "Go" menu with web maps.  General GUI cleanup.